--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Source Code Pro", serif;
-  background-color: #e6e6e6;
+  background-color: #f1f1f1;
   position: relative;
 }
 
